--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,7 +11,7 @@ body {
   height: 100%;
 }
 body {
-  font-family: 'Noto Sans', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   color: #fff;
   font-size: 18px;
   -webkit-font-smoothing: antialiased;
